Adds sprint 1 implementation for core
