# core/docs/swagger.yaml
@@ -1,7 +1,7 @@
 basePath: /api/v1
 definitions:
-  main.DetectionRequest:
-    description: DetectionRequest contains the UUID and content to be analyzed
+  modules.DetectionRequest:
+    description: DetectionRequest contains the request UUID and content to be analyzed
     properties:
       content:
         description: |-
@@ -17,10 +17,19 @@ definitions:
           example: f47ac10b-58cc-4372-a567-0e02b2c3d479
         example: f47ac10b-58cc-4372-a567-0e02b2c3d479
         type: string
+    required:
+    - requestId
     type: object
-  main.DetectionStatus:
+  modules.DetectionStatus:
     description: DetectionStatus includes the status of the request and the verdict
     properties:
+      requestId:
+        description: |-
+          RequestID is the unique identifier for the detection request
+          required: true
+          example: f47ac10b-58cc-4372-a567-0e02b2c3d479
+        example: f47ac10b-58cc-4372-a567-0e02b2c3d479
+        type: string
       status:
         description: |-
           Status is the current status of the detection request
@@ -31,12 +40,14 @@ definitions:
         type: string
       verdict:
         allOf:
-        - $ref: '#/definitions/main.Verdict'
+        - $ref: '#/definitions/modules.Verdict'
         description: |-
           Verdict is the result of the detection (optional)
           It can be null if no verdict is available yet
+    required:
+    - requestId
     type: object
-  main.Label:
+  modules.Label:
     properties:
       label:
         description: |-
@@ -51,12 +62,12 @@ definitions:
         example: 0.85
         type: number
     type: object
-  main.Verdict:
+  modules.Verdict:
     properties:
       labels:
         description: Labels with associated probabilities
         items:
-          $ref: '#/definitions/main.Label'
+          $ref: '#/definitions/modules.Label'
         type: array
     type: object
 host: localhost:8080
@@ -83,7 +94,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/main.DetectionStatus'
+            $ref: '#/definitions/modules.DetectionStatus'
         "400":
           description: Missing requestId parameter
           schema:
@@ -107,14 +118,14 @@ paths:
         name: detectionRequest
         required: true
         schema:
-          $ref: '#/definitions/main.DetectionRequest'
+          $ref: '#/definitions/modules.DetectionRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/main.DetectionStatus'
+            $ref: '#/definitions/modules.DetectionStatus'
         "400":
           description: Invalid request body
           schema:
